@@ -1,5 +1,5 @@
 /*
-    Copyright 1995-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 1995-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -72,7 +72,7 @@ void fostlib::arguments::environment( const string &envName, const string &secti
 
 
 void fostlib::arguments::argument( arguments::size_type argument, const string &section, const string &name ) {
-    if ( argument >= 0 && argument < size() ) {
+    if ( argument < size() ) {
         m_registered.push_back( boost::shared_ptr< setting< json > >( new setting< json >( L"Command argument", section, name, json( m_arguments[ argument ] ), false ) ) );
     }
 }
