@@ -216,7 +216,7 @@ namespace {
         uint64_t p;
         array_dereference( json::array_t::size_type p ) : p( p ) {}
         const json &operator ()( const json::array_t &a ) const {
-            if ( p < 0 || p >= a.size() )
+            if ( p >= a.size() )
                 throw fostlib::exceptions::out_of_range< json::array_t::size_type, uint64_t >( 0, a.size(), p );
             else
                 return *a[ json::array_t::size_type( p ) ];
