@@ -1,3 +1,6 @@
+2012-02-12  Kirit Saelensminde  <kirit@felspar.com>
+ Made some minor changes suggested by clang, including some dead code elimination.
+
 2012-01-30  Kirit Saelensminde  <kirit@felspar.com>
  MSVC 10 supports stdint.h so changed the configuration to use that.
 
